--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="brightText">#8049454F</color>
     <color name="white">#FFFFFFFF</color>
     <color name="brightBG">#f1f1f1</color>
-    <color name="darkBlue">#076dab</color>
+    <color name="darkBlue">#003FBC</color>
     <color name="brightBlue">#0da8d6</color>
     <color name="grey">#808080</color>
     <color name="brightGrey">#919191</color>
