change_main_activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,12 +49,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Введите логин"
-            app:startIconContentDescription="Логин">
+            app:startIconContentDescription="Логин"
+            app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -64,7 +64,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Введите логин"
-            app:startIconContentDescription="Логин">
+            app:startIconContentDescription="Логин"
+            app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
