--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
 
         <RelativeLayout
             android:layout_width="340dp"
-            android:layout_height="500dp"
+            android:layout_height="420dp"
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="false"
             android:layout_marginStart="20dp"
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/Greetings"
                 android:textColor="@color/darkBlue"
@@ -66,14 +66,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="130dp"
+                android:layout_marginTop="110dp"
                 android:layout_marginEnd="30dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:hint="@string/Login"
                 android:textColorHint="@color/brightText"
                 app:startIconContentDescription="@string/Login"
                 app:startIconTint="@color/darkBlue"
-                app:errorEnabled="true" >
+                app:errorEnabled="true"
+                app:helperTextEnabled="true"
+                app:helperText="Формат: studXXXXXX или usrXXXXXX"
+                app:helperTextTextColor="@color/brightText"
+                app:endIconMode="clear_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -87,32 +91,34 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/LoginField"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:hint="@string/Password"
                 android:textColorHint="@color/brightText"
                 app:startIconContentDescription="@string/Password"
                 app:startIconTint="@color/darkBlue"
-                app:errorEnabled="true" >
+                app:errorEnabled="true"
+                app:endIconMode="password_toggle" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-                android:id="@+id/SaveButton"
+                android:id="@+id/LoginButton"
                 android:layout_width="160dp"
                 android:layout_height="50dp"
                 android:layout_below="@+id/PasswordField"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="34dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/fade_button"
                 android:fontFamily="@font/montserrat_bold"
-                android:onClick="SaveButtonPressed"
+                android:onClick="LoginPressed"
                 android:text="@string/SaveButton"
                 android:textColor="#FFFFFF"
                 android:textColorHighlight="#FFFFFF"
