--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,12 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="Theme.VyatsuApp" parent="Base.Theme.VyatsuApp" >
+        <item name="colorPrimary">@color/brightBlue</item>
+        <item name="colorPrimaryDark">@color/brightBlue</item>
+        <item name="android:textColorPrimary">#CE000000</item>
+        <item name="android:textColor">#CE000000</item>
+        <item name="colorOnSecondary">@color/brightBG</item>
+    </style>
 </resources>
