--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -47,28 +47,6 @@
                     style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
-                    android:id="@+id/Documents"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:text="@string/Documents"
-                    android:textColor="@color/white"
-                    android:onClick="documentsPressed"
-                    android:textSize="18sp"
-                    style="?android:attr/buttonBarButtonStyle" />
-
-                <Button
-                    android:id="@+id/Surveys"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:text="@string/Surveys"
-                    android:textColor="@color/white"
-                    android:onClick="surveysPressed"
-                    android:textSize="18sp"
-                    style="?android:attr/buttonBarButtonStyle" />
-
-                <Button
                     android:id="@+id/PersonalData"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -105,12 +83,45 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/upperBG">
 
-        <ScrollView
+        <RelativeLayout
+            android:id="@+id/updateBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="6dp"
+            android:layout_marginStart="10dp">
 
             <TextView
-                android:id="@+id/timeTableURL"
+                android:id="@+id/lastUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/lastUpdateText"
+                android:textSize="20sp" />
+
+            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+                android:id="@+id/updateButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="10dp"
+                android:background="#00FFFFFF"
+                android:foreground="@drawable/update"
+                android:onClick="updatePressed"
+                android:rotation="-360" />
+
+        </RelativeLayout>
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/updateBar" >
+
+            <TextView
+                android:id="@+id/timetableInfo"
+                android:fontFamily="@font/montserrat_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
