--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -1,9 +1,8 @@
-<!-- item_timetable.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="@drawable/border"
+    android:background="@drawable/item_border"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -12,8 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="День недели XX.XX.XXXX"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/montserrat_bold"/>
 
     <TextView
         android:id="@+id/classInfoTextView"
@@ -21,5 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Пара X: XX:XX-XX:XX\n..., \nПреподаватель ..., XX-XXX"
-        android:textSize="14sp" />
+        android:textSize="16sp"
+        />
 </LinearLayout>
