--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.VyatsuApp" parent="Theme.Material3.DayNight.NoActionBar">
-
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.VyatsuApp" parent="Base.Theme.VyatsuApp" >
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:statusBarColor">@color/brightBlue</item>
+        <item name="android:clipToPadding">false</item>
         <item name="colorPrimary">@color/brightBlue</item>
         <item name="colorPrimaryDark">@color/brightBlue</item>
         <item name="android:textColorPrimary">#CE000000</item>
+        <item name="android:textColor">#CE000000</item>
         <item name="colorOnSecondary">@color/brightBG</item>
     </style>
-
 </resources>
