--- a/app/src/main/res/drawable/item_border.xml
+++ b/app/src/main/res/drawable/item_border.xml
@@ -4,4 +4,5 @@
         android:width="2dp"
         android:color="@color/brightBlue" />
     <corners android:radius="20dp" />
+    <solid android:color="@color/brightBG"/>
 </shape>
