--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/timetableActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,37 +16,48 @@
             android:id="@+id/WindowName"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="54dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="62dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="@string/Timetable"
             android:textColor="@color/white"
             android:textSize="28sp" />
 
+        <Button
+            android:id="@+id/downloadPDF"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="144dp"
+            android:background="#00FFFFFF"
+            android:foreground="@drawable/pdf"
+            android:onClick="downloadPDF" />
+
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/updateButton"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="58dp"
-            android:layout_marginEnd="90dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="84dp"
             android:background="#00FFFFFF"
             android:foreground="@drawable/update"
             android:onClick="updatePressed"
-            android:rotation="180" />
+            android:rotation="130" />
 
-        <Button
-            android:id="@+id/logout"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="58dp"
-            android:layout_marginEnd="28dp"
-            android:background="#00FFFFFF"
-            android:foreground="@drawable/logout"
-            android:onClick="logoutPressed" />
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="66dp"
+            android:layout_marginEnd="32dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ToolbarStyle" />
 
     </RelativeLayout>
 
@@ -61,39 +72,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="6dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="6dp">
 
             <TextView
                 android:id="@+id/lastUpdate"
-                android:layout_width="385dp"
+                android:layout_width="wrap_content"
                 android:layout_height="26dp"
-                android:layout_alignParentStart="true"
                 android:fontFamily="@font/montserrat_bold"
                 android:singleLine="true"
                 android:text="@string/lastUpdateText"
                 android:textSize="18sp" />
-
-
         </RelativeLayout>
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/updateBar">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/updateBar" >
-
-            </androidx.recyclerview.widget.RecyclerView>
-
-
-        </ScrollView>
-
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@id/updateBar"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"/>
     </RelativeLayout>
-
 </RelativeLayout>
