--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="brightBlue">#0da8d6</color>
     <color name="grey">#808080</color>
     <color name="brightGrey">#919191</color>
+    <color name="semiTransparentBlack">#80000000</color>
+
 </resources>
