--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,10 @@
         <item name="android:scrollbarSize">2dp</item>
         <item name="android:scrollbarThumbVertical">@color/darkBlue</item>
     </style>
+    <style name="ToolbarStyle" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:background">@color/brightBG</item>
+        <item name="popupMenuBackground">@color/brightBG</item>
+    </style>
 </resources>
