--- a/app/src/main/res/layout/item_class.xml
+++ b/app/src/main/res/layout/item_class.xml
@@ -1,57 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/classInfoContainer"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginBottom="10dp"
-        android:gravity="center|left"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="290dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/classNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_bold"
-                android:layout_marginTop="4dp"
-                android:text="@string/classNumberTextView"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/classInfoTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:fontFamily="@font/montserrat_medium"
-                android:text="@string/classInfoTextView"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginStart="7dp"
-            android:layout_marginEnd="7dp"
-            android:background="@drawable/divider" />
-
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/divider"
+        app:layout_constraintHorizontal_weight="1">
 
         <TextView
-            android:id="@+id/classroomInfo"
+            android:id="@+id/classNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_bold"
+            android:layout_marginTop="4dp"
+            android:text="@string/classNumberTextView"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/classInfoTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/montserrat_medium"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="@string/classroomTextView"
-            android:textSize="18sp" />
+            android:text="@string/classInfoTextView"
+            android:textSize="16sp" />
     </LinearLayout>
-</LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/divider"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/classInfoContainer"
+        app:layout_constraintEnd_toStartOf="@id/classroomInfo"/>
+
+    <TextView
+        android:id="@+id/classroomInfo"
+        android:layout_width="66dp"
+        android:layout_height="wrap_content"
+        android:minWidth="66dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:text="@string/classroomTextView"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
