--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/timetableActivity"
     android:layout_width="match_parent"
@@ -6,60 +7,82 @@
     android:background="@color/brightBG"
     android:gravity="center_horizontal">
 
-    <RelativeLayout
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_alignParentTop="true"
+        android:indeterminate="false"
+        android:progress="0"
+        android:max="500"
+        android:visibility="visible"
+        android:progressDrawable="@drawable/green_pb" />
+
+    <LinearLayout
         android:id="@+id/upperBG"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="@color/brightBlue">
+        android:layout_height="95dp"
+        android:background="@color/brightBlue"
+        android:orientation="vertical"
+        android:layout_below="@id/progressBar">
 
-        <TextView
-            android:id="@+id/WindowName"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="62dp"
-            android:fontFamily="@font/montserrat_bold"
-            android:text="@string/Timetable"
-            android:textColor="@color/white"
-            android:textSize="28sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/downloadPDF"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="144dp"
-            android:background="#00FFFFFF"
-            android:foreground="@drawable/pdf"
-            android:onClick="downloadPDF" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="45dp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/Timetable"
+                android:textColor="@color/white"
+                android:textSize="26sp" />
 
-        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/updateButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="84dp"
-            android:background="#00FFFFFF"
-            android:foreground="@drawable/update"
-            android:onClick="updatePressed"
-            android:rotation="130" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="47dp"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginEnd="16dp">
 
+                <Button
+                    android:id="@+id/downloadPDF"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:background="#00FFFFFF"
+                    android:foreground="@drawable/pdf"
+                    android:onClick="downloadPDF" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="66dp"
-            android:layout_marginEnd="32dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ToolbarStyle" />
+                <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+                    android:id="@+id/updateButton"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginStart="28dp"
+                    android:background="#00FFFFFF"
+                    android:foreground="@drawable/update"
+                    android:onClick="updatePressed"
+                    android:rotation="130" />
 
-    </RelativeLayout>
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="34dp"
+                    android:layout_height="34dp"
+                    android:layout_marginStart="18dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    app:popupTheme="@style/ToolbarStyle" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/Timetable"
@@ -87,9 +110,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/updateBar"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical"/>
+            android:orientation="vertical" />
     </RelativeLayout>
 </RelativeLayout>
