--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,11 @@
         <item name="android:background">@color/brightBG</item>
         <item name="popupMenuBackground">@color/brightBG</item>
     </style>
-</resources>
+    <style name="CustomAlertDialogTheme" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="android:background">@color/brightBG</item>
+        <item name="android:textColorPrimary">@color/black</item> 
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="colorPrimary">@color/brightBlue</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+    </style>
+    </resources>
